--- a/packages/translucent/package.json
+++ b/packages/translucent/package.json
@@ -11,31 +11,32 @@
     "build"
   ],
   "devDependencies": {
-    "@cardano-ogmios/schema": "^6.0.0-rc6",
+    "@cardano-ogmios/schema": "^6.5.0",
     "@rollup/plugin-json": "^6.0.1",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "29.5.12",
     "@types/sha256": "^0.2.2",
-    "@types/node": "^20.12.2",
-    "bun-types": "latest",
-    "eslint": "^8.50.0",
+    "@types/node": "^22.3.0",
+    "bun-types": "1.1.24",
+    "eslint": "^9.9.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
-    "rimraf": "^5.0.5",
+    "rimraf": "^6.0.1",
     "prettier": "^3.1.1",
     "fast-check": "^3.14.0"
   },
   "dependencies": {
-    "@dcspark/cardano-multiplatform-lib-browser": "^3.1.2",
-    "@dcspark/cardano-multiplatform-lib-nodejs": "^3.1.2",
+    "@dcspark/cardano-multiplatform-lib-browser": "^5.3.1",
+    "@dcspark/cardano-multiplatform-lib-nodejs": "^5.3.1",
     "@emurgo/cardano-message-signing-browser": "^1.0.1",
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
-    "@sinclair/typebox": "^0.31.28",
-    "sha256": "^0.2.0",
-    "uplc-node": "^0.0.3",
-    "uplc-web": "^0.0.3",
+    "@sinclair/typebox": "^0.33.5",
+    "blakejs": "^1.2.1",
     "rollup": "^4.5.0",
     "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-esbuild": "^6.1.0"
+    "rollup-plugin-esbuild": "^6.1.0",
+    "sha256": "^0.2.0",
+    "uplc-node": "^0.0.3",
+    "uplc-web": "^0.0.3"
   }
 }
